--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   intl: ^0.18.1
   pdf: ^3.10.4
   printing: ^5.11.0
+  uuid: ^4.5.1
+  get_storage: ^2.1.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -70,6 +72,7 @@ flutter:
   assets:
       - assets/loginbg.png
       - assets/LogoAlphaOmega.jpeg
+      - assets/logoalphaomegapng.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
