--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   uuid: ^4.5.1
   get_storage: ^2.1.1
   shared_preferences: ^2.5.3
+  dropdown_search: ^6.0.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
