--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   get_storage: ^2.1.1
   shared_preferences: ^2.5.3
   dropdown_search: ^6.0.2
+  socket_io_client: ^3.1.2
+  cached_network_image: ^3.3.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
