--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   dropdown_search: ^6.0.2
   socket_io_client: ^3.1.2
   cached_network_image: ^3.3.1
+  path_provider: ^2.0.14
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
@@ -76,6 +77,7 @@ flutter:
       - assets/loginbg.png
       - assets/LogoAlphaOmega.jpeg
       - assets/logoalphaomegapng.png
+      - assets/fonts/Roboto/static/Roboto-Regular.ttf
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
