--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  http: ^0.13.6
+  http: ^1.2.0
   dio: ^5.3.2
   flutter_bloc: ^8.1.3
   equatable: ^2.0.5
@@ -46,9 +46,13 @@ dependencies:
   socket_io_client: ^3.1.2
   cached_network_image: ^3.3.1
   path_provider: ^2.0.14
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  onesignal_flutter: ^5.1.0
+  overlay_support: ^2.1.0
+  open_filex: ^4.3.4
+  syncfusion_flutter_pdfviewer: 25.2.7
+  syncfusion_pdfviewer_platform_interface: 25.2.7
+  file_saver: ^0.2.12
 
 dev_dependencies:
   flutter_test:
