--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,12 +47,13 @@ dependencies:
   cached_network_image: ^3.3.1
   path_provider: ^2.0.14
   cupertino_icons: ^1.0.8
-  onesignal_flutter: ^5.1.0
+  onesignal_flutter: ^5.3.4
   overlay_support: ^2.1.0
   open_filex: ^4.3.4
-  syncfusion_flutter_pdfviewer: 25.2.7
-  syncfusion_pdfviewer_platform_interface: 25.2.7
+  syncfusion_flutter_pdfviewer: ^31.2.5
+  syncfusion_pdfviewer_platform_interface: ^31.2.5
   file_saver: ^0.2.12
+  audioplayers: ^6.5.1
 
 dev_dependencies:
   flutter_test:
@@ -82,6 +83,7 @@ flutter:
       - assets/LogoAlphaOmega.jpeg
       - assets/logoalphaomegapng.png
       - assets/fonts/Roboto/static/Roboto-Regular.ttf
+      - assets/sounds/cashier.mp3
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
