--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,7 +44,7 @@ dependencies:
   shared_preferences: ^2.5.3
   dropdown_search: ^6.0.2
   socket_io_client: ^3.1.2
-  cached_network_image: ^3.3.1
+  cached_network_image: ^3.4.1
   path_provider: ^2.0.14
   cupertino_icons: ^1.0.8
   onesignal_flutter: ^5.3.4
@@ -54,6 +54,7 @@ dependencies:
   syncfusion_pdfviewer_platform_interface: ^31.2.5
   file_saver: ^0.2.12
   audioplayers: ^6.5.1
+  fl_chart: ^1.1.1
 
 dev_dependencies:
   flutter_test:
